Fix hoi4 issues caused by latest update